Changes to settings

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_NAME= postgres
 DB_USER= postgres.gncuhsasyesltvxgzdun
 DB_PASSWORD= $@&~-Quhr~4k5Yt
-DATAB_HOST= aws-0-us-west-1.pooler.supabase.com
+DB_HOST= aws-0-us-west-1.pooler.supabase.com
 DB_PORT= 6543
